# snapcore

./: LICENSE  README.md  cli.py  config.py  conftest.py  exceptions.py  facade.py  models.py  patterns.py  plugin.py  protocols.py  pyproject.toml  runtime.py
alignment/: __init__.py  models.py  paths.py  registry.py
diff/: __init__.py  changes.py  structural.py  text.py
intelligence/: analyzer.py  collector.py  models.py  profiler.py
pytest_snapshot/: __init__.py  cli.py  config.py  facade.py  models.py  patterns.py  plugin.py  policy.py  protocols.py  runtime.py
pytest_snapshot/alignment/: executor.py  findings.py  models.py  paths.py
pytest_snapshot/diff/: changes.py  lcs.py  structural.py
pytest_snapshot/intelligence/: __init__.py  analyzer.py  collector.py  extractor.py  findings.py  models.py  profiler.py  report.py  suggestions.py
pytest_snapshot/review/: __init__.py  report.py  session.py
pytest_snapshot/sanitizers/: __init__.py  builtins.py  json_masks.py  profiles.py  registry.py  relational.py
pytest_snapshot/serializers/: __init__.py  json.py  registry.py  repr.py
pytest_snapshot/storage/: __init__.py  file.py  naming.py
review/: collector.py  session.py
sanitizers/: __init__.py  json_masks.py  profiles.py  registry.py
serializers/: registry.py  text.py
tests/: conftest.py  test_intelligence_collector.py  test_intelligence_e2e.py  test_intelligence_extractor.py  test_intelligence_findings.py  test_intelligence_profiler.py  test_intelligence_suggestions.py
