[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-snapshot"
version = "0.1.0
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pytest>=7.0",
]

[project.entry-points."pytest11"]
snapshot = "pytest_snapshot.plugin"

[project.scripts]
pytest-snapshot = "pytest_snapshot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
